[gd_scene load_steps=33 format=3 uid="uid://d17ejxaqp08vu"]

[ext_resource type="Script" path="res://Scripts/Entities/Player.gd" id="1_1uckq"]
[ext_resource type="Texture2D" uid="uid://dp4x53kqqagsb" path="res://GameAssets/PirateGameAssets/Episode6/17-Attack 3/Attack 3 03.png" id="2_75ru0"]
[ext_resource type="Texture2D" uid="uid://m3apd7wctxi3" path="res://GameAssets/PirateGameAssets/Episode2/14-Hit Sword/Hit Sword 04.png" id="2_g13v4"]
[ext_resource type="Texture2D" uid="uid://bt2ob6xe80gbl" path="res://GameAssets/PirateGameAssets/Episode2/12-Fall Sword/Fall Sword 01.png" id="6_0j4oj"]
[ext_resource type="Texture2D" uid="uid://clp8k3me67lgf" path="res://GameAssets/PirateGameAssets/Episode2/14-Hit Sword/Hit Sword 01.png" id="7_rpiuy"]
[ext_resource type="Texture2D" uid="uid://c4b1fe6trhra3" path="res://GameAssets/PirateGameAssets/Episode2/14-Hit Sword/Hit Sword 02.png" id="8_llrh6"]
[ext_resource type="Texture2D" uid="uid://bdydrtbyuxqa" path="res://GameAssets/PirateGameAssets/Episode2/14-Hit Sword/Hit Sword 03.png" id="9_y2vhm"]
[ext_resource type="Texture2D" uid="uid://cfn68x1o7kr2v" path="res://GameAssets/PirateGameAssets/Episode2/09-Idle Sword/Idle Sword 01.png" id="10_txev6"]
[ext_resource type="Texture2D" uid="uid://cwpc1e36a5ic7" path="res://GameAssets/PirateGameAssets/Episode2/09-Idle Sword/Idle Sword 02.png" id="11_yi7ty"]
[ext_resource type="Texture2D" uid="uid://crbif3eu6yqpw" path="res://GameAssets/PirateGameAssets/Episode2/09-Idle Sword/Idle Sword 03.png" id="12_1s5np"]
[ext_resource type="Texture2D" uid="uid://dhevufswrqeun" path="res://GameAssets/PirateGameAssets/Episode2/09-Idle Sword/Idle Sword 04.png" id="13_1sccm"]
[ext_resource type="Texture2D" uid="uid://bfftxq83ca6bn" path="res://GameAssets/PirateGameAssets/Episode2/09-Idle Sword/Idle Sword 05.png" id="14_hust6"]
[ext_resource type="Texture2D" uid="uid://by0i43d2dsy8d" path="res://GameAssets/PirateGameAssets/Episode2/11-Jump Sword/Jump Sword 01.png" id="15_rbf2p"]
[ext_resource type="Texture2D" uid="uid://d2ulduq7eiuod" path="res://GameAssets/PirateGameAssets/Episode2/11-Jump Sword/Jump Sword 02.png" id="16_v6yat"]
[ext_resource type="Texture2D" uid="uid://bsrjevky8ok2k" path="res://GameAssets/PirateGameAssets/Episode2/11-Jump Sword/Jump Sword 03.png" id="17_as3rj"]
[ext_resource type="Texture2D" uid="uid://bttp4jv4gxty8" path="res://GameAssets/PirateGameAssets/Episode6/17-Attack 3/Attack 3 01.png" id="18_3oprx"]
[ext_resource type="Texture2D" uid="uid://bga4goehyqjr6" path="res://GameAssets/PirateGameAssets/Episode2/10-Run Sword/Run Sword 01.png" id="18_a8brc"]
[ext_resource type="Texture2D" uid="uid://bfeamadbr8nk7" path="res://GameAssets/PirateGameAssets/Episode6/17-Attack 3/Attack 3 02.png" id="19_41j6i"]
[ext_resource type="Texture2D" uid="uid://blgiw058nd40h" path="res://GameAssets/PirateGameAssets/Episode2/10-Run Sword/Run Sword 02.png" id="19_dtro7"]
[ext_resource type="Texture2D" uid="uid://dmeavyukjeixj" path="res://GameAssets/PirateGameAssets/Episode2/10-Run Sword/Run Sword 03.png" id="20_klrpq"]
[ext_resource type="Texture2D" uid="uid://b1jo8tsiwnyjx" path="res://GameAssets/PirateGameAssets/Episode2/10-Run Sword/Run Sword 04.png" id="21_lcqxu"]
[ext_resource type="Texture2D" uid="uid://b1fyha18mwjli" path="res://GameAssets/PirateGameAssets/Episode2/10-Run Sword/Run Sword 05.png" id="22_wiqf3"]
[ext_resource type="Texture2D" uid="uid://dqgmjo8co4nku" path="res://GameAssets/PirateGameAssets/Episode2/10-Run Sword/Run Sword 06.png" id="23_y51hy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t8lrd"]
size = Vector2(20.9997, 26.2408)

[sub_resource type="Animation" id="Animation_owxlx"]
resource_name = "Attack"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("18_3oprx"), ExtResource("19_41j6i"), ExtResource("2_75ru0")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:attacking")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_5oxy0"]
resource_name = "Fall"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_0j4oj")]
}

[sub_resource type="Animation" id="Animation_e6jne"]
resource_name = "Hit"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [ExtResource("7_rpiuy"), ExtResource("8_llrh6"), ExtResource("9_y2vhm"), ExtResource("2_g13v4")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hit")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_n2fpi"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0001, 0.0002, 0.0003, 0.0004, 0.0005, 0.0006, 0.0007, 0.0008, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("10_txev6"), ExtResource("11_yi7ty"), ExtResource("12_1s5np"), ExtResource("13_1sccm"), ExtResource("14_hust6")]
}

[sub_resource type="Animation" id="Animation_2psyl"]
resource_name = "Jump"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("15_rbf2p"), ExtResource("16_v6yat"), ExtResource("17_as3rj")]
}

[sub_resource type="Animation" id="Animation_nvqy1"]
resource_name = "Run"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.2001, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [ExtResource("18_a8brc"), ExtResource("19_dtro7"), ExtResource("20_klrpq"), ExtResource("20_klrpq"), ExtResource("21_lcqxu"), ExtResource("22_wiqf3"), ExtResource("23_y51hy")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27e12"]
_data = {
"Attack": SubResource("Animation_owxlx"),
"Fall": SubResource("Animation_5oxy0"),
"Hit": SubResource("Animation_e6jne"),
"Idle": SubResource("Animation_n2fpi"),
"Jump": SubResource("Animation_2psyl"),
"Run": SubResource("Animation_nvqy1")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_tda7h"]
radius = 12.2605

[node name="Player" type="CharacterBody2D"]
position = Vector2(0, -16)
scale = Vector2(1.23796, 1.1837)
collision_layer = 2
script = ExtResource("1_1uckq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 1.68962)
texture = ExtResource("2_g13v4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_t8lrd")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_27e12")
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-9.53674e-07, 1.90735e-06)
limit_smoothed = true
position_smoothing_enabled = true
rotation_smoothing_enabled = true

[node name="CoyoteTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_t8lrd")

[node name="AttackArea" type="Area2D" parent="."]
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(18.579, 6.75847)
scale = Vector2(0.99628, 0.544708)
shape = SubResource("CircleShape2D_tda7h")

[connection signal="timeout" from="CoyoteTimer" to="." method="Coyote_Timeout"]
